# forestry_optimizer_backend

./: .cursorrules  .dockerignore  .env  .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  diesel.toml  docker-compose.yml  wait-for-it.sh
.github/workflows/: rust.yml
migrations/2024-03-21-000001_add_auth_tables/: up.sql
migrations/2024-10-20-011959_create_tables/: down.sql
migrations/2024-10-20-012001_add_organization_name_unique_constraint/: down.sql
migrations/2024-12-03-210125_add_organization_name_unique_constraint/: up.sql
migrations/2024-12-11-135253_create_tables/: down.sql  up.sql
migrations/2024-12-11-165856_add_user_role_and_email_verified/: down.sql  up.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs  server.rs
src/api/: doc.rs  mod.rs  organization.rs  organization_api.rs
src/api/dto/: auth.rs  health.rs  mod.rs
src/api/handlers/: auth.rs  health.rs  mod.rs  organization.rs
src/api/middleware/: mod.rs  rate_limit.rs  request_id.rs  security.rs  validation.rs
src/api/models/: mod.rs  organization.rs  pagination.rs  responses.rs
src/api/resources/: mod.rs
src/api/routes/: mod.rs
src/api/types/: health.rs  mod.rs  organization.rs  pagination.rs  responses.rs
src/api/utils/: mod.rs  pagination.rs  responses.rs
src/application/: mod.rs
src/application/api/: mod.rs
src/application/config/: app_config.rs  cors.rs  environment.rs  mod.rs  security.rs
src/application/docs/: openapi.rs
src/application/server/: mod.rs
src/application/services/: auth.rs  mod.rs  organization.rs
src/common/: pagination.rs
src/common/error/: api_error.rs  mod.rs
src/config/: builder.rs  config.rs  database.rs  defaults.rs  environment.rs  logger.rs  mod.rs  sentry.rs
src/database/: connection.rs
src/database/models/: auth.rs  mod.rs  organization.rs
src/database/repositories/: auth.rs  mod.rs  organization.rs
src/db/: connection.rs  db.rs  mod.rs  schema.rs
src/db/model/: auth.rs  base.rs  mod.rs
src/db/models/: auth.rs  base.rs  mod.rs  organization.rs
src/db/repositories/: auth.rs  base.rs  mod.rs  organization.rs
src/db/repository/: auth.rs  mod.rs  organization.rs
src/docs/: mod.rs  openapi.rs
src/domain/: auth.rs  mod.rs  organization.rs
src/domain/auth/: claims.rs  mod.rs  service.rs  tokens.rs  validation.rs
src/domain/models/: base.rs  common.rs  mod.rs  (+2 more)
src/error/: api.rs  api_error.rs  error_code.rs  error_context.rs  mod.rs
src/errors/: api_error.rs  error_code.rs  error_context.rs  mod.rs
src/infrastructure/: mod.rs
src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs  request_id.rs  validation.rs
src/models/: mod.rs  organization.rs
src/repositories/: mod.rs  organization.rs  organization_repository.rs
src/server/: mod.rs
src/services/: auth.rs  organization.rs
src/tests/: mod.rs
src/utils/: builder.rs  config.rs  defaults.rs  environment.rs  mod.rs
(+118 files in other folders)
