[package]
    name = "optimizer"
    version = "0.1.0"
    edition = "2021"

[dependencies]
   diesel = { version = "2.2.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
   dotenv = "0.15.0"
   actix-web = "4.3.1"
   serde = { version = "1.0", features = ["derive"] }
   serde_json = "1.0"
   uuid = { version = "1.3", features = ["v4", "serde"] }
   chrono = { version = "0.4", features = ["serde"] }
   r2d2 = "0.8.10"
   log = "0.4"
   env_logger = "0.10"
   thiserror = "1.0"
   utoipa = { version = "5.1.2", features = ["actix_extras", "uuid", "chrono"] }
   utoipa-actix-web = "0.1.0"
   utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
   sentry = { version = "0.34.0", features = ["log"] }
   envy = "0.4"

[dev-dependencies]
   actix-rt = "2.5.0"
   actix-web = "4.3.1"
