[package]
    name = "rust_server"
    version = "0.1.0"
    edition = "2021"

[lib]
name = "rust_server"
path = "src/lib.rs"

[[bin]]
name = "rust_server"
path = "src/main.rs"

[dependencies]
   diesel = { version = "2.2.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
   dotenv = "0.15.0"
   actix-web = "4.3.1"
   serde = { version = "1.0", features = ["derive"] }
   serde_json = "1.0"
   uuid = { version = "1.3", features = ["v4", "serde"] }
   chrono = { version = "0.4", features = ["serde"] }
   r2d2 = "0.8.10"
   thiserror = "1.0"
   utoipa = { version = "5.1.2", features = ["actix_extras", "uuid", "chrono"] }
   utoipa-actix-web = "0.1.0"
   utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
   sentry = { version = "0.34.0", features = ["log"] }
   envy = "0.4"
   futures = "0.3"
   tokio = { version = "1.36", features = [
       "rt-multi-thread",
       "macros",
       "sync",
       "time",
   ]}
   validator = { version = "0.16", features = ["derive"] }
   tracing = "0.1"
   tracing-subscriber = { version = "0.3", features = ["env-filter"] }
   tracing-bunyan-formatter = "0.3"
   tracing-actix-web = "0.7"
   tracing-appender = "0.2"
   metrics = "0.21"
   metrics-exporter-prometheus = "0.12"
   metrics-util = "0.15"
   async-trait = "0.1.83"
   sysinfo = "0.29"
   num_cpus = "1.16"
   futures-util = "0.3.31"
   argon2 = "0.5.3"
   diesel-derive-enum = { version = "2.1", features = ["postgres"] }
   jsonwebtoken = "9.3.0"
   parking_lot = "0.12.3"
   cached = "0.54.0"
   sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }
   once_cell = "1.18"
   regex = "1.10.2"
   lazy_static = "1.4.0"

[dev-dependencies]
   actix-rt = "2.5.0"
   actix-web = "4.3.1"
   tokio-test = "0.4"
   mockall = "0.11"
   fake = { version = "2.8", features = ["derive"] }
   serial_test = "2.0"
   pretty_assertions = "1.4"
   test-log = { version = "0.2", features = ["trace"] }
   env_logger = "0.10"
   wiremock = "0.5"
